Modernize build system and language features (Phase 7)
- Enable -Xlint:deprecation and -Xlint:unchecked in build.gradle.kts.
- Replace deprecated Class.newInstance() with getDeclaredConstructor().newInstance() in parsers.
- Replace deprecated isAccessible() with Modifier.isPublic() and canAccess() where appropriate.
- Resolve unchecked cast warning in AFP2XML.java.
- Implement Pattern Matching for instanceof and var in AFPParser.java.
- Update ROADMAP.md with detailed sub-tasks for Records and Sealed Classes.
- Ensure 100% test pass rate (250/250).